add start other app's activity

--- a/Support_Different_Devices/src/main/res/layout/activity_main.xml
+++ b/Support_Different_Devices/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.zzh.androidtrainingdemo.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button"
+        android:text="@string/dial"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
