--- a/Demo/src/main/res/layout/activity_main.xml
+++ b/Demo/src/main/res/layout/activity_main.xml
@@ -8,18 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.zzh.androidtrainingdemo.MainActivity">
+    tools:context="com.zzh.test.MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:text="@string/dial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/requestPermission"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/requestPermission"
-        android:layout_below="@+id/button"/>
+        android:text="Hello World!"/>
 </RelativeLayout>
